css/desktop.css
/* ... */
.accord-content p{color: #5e5e5e;font-size: 1.4em;}
.accord-content p span{font-weight: bold;}
.locations .section_left .locations-list:first-child .accord-content, .faq_section .locations-list:first-child .accord-content {display:block;}

/* Style for Job alerts page */
.job_alert {font-size:1.4em;color:#5e5e5e;}
.job_alert label{display:block; padding-bottom: 5px;}
.job_alert p{font-size:0.9em;padding-top: 8px;float: left;margin: 0px;}
.job_alert input[type='submit']{padding:5px 8px;font-size:0.9em;clear: both;}
#wrapper .job_alert .section_left {float: left; width: 43%; clear: both;margin-left: 30px;border-right: 1px solid #D2D2D2;padding-right:15px;}
.job_alert input#email { border: 1px solid #B8B8B8;padding: 10px 5px;width: 280px;}
.job_alert span{padding:20px 0px 15px;display: block;}
.job_alert .section_left div{float:left;width: 100%;padding-bottom: 5px;}
.job_alert .section_left div label{float: left;}
.job_alert .section_left div input{ float: left;margin-right: 8px;margin-top: 5px;}
#wrapper .search_results.job_alert .section_left input, #wrapper .search_results.job_alert .section_left p{margin-left: 0px;}


.join_us_gallery .maison_prev, .join_us_gallery .maison_next{text-indent: -9999px;}
.creativity_head .bg_img img{/*display: none;*/}
.our_world .slides .content a{ color: #2B2B2B;font-size: 1.4em;margin-bottom: 10px;text-decoration: underline;padding-left: 4px;}
.section_images .section_bg, .gallery_join .span_7.col .two_sections{display:none;}
.section_images .section_bg.active, .gallery_join .span_7.col .two_sections.active{display:block;}
.search_main_block .inner_block .search_buttons {margin-top: 24px;}

/* Style for Single-Column page */
#wrapper .column-content .col h2{font-size: 5em;margin: 30px 0 20px 0px;}
.column-content{margin-top: 75px;margin-left:30px;margin-right:20px;}
.column-content h3, .column-content .column-tab-content h6, .column-content h5.bold_text{font-size:1.4em;margin:0px;color:#00436e;line-height: 22px;}
.column-content h4, .column-content .column-tab-content p{font-size:1.4em;margin:0px;color:#000;padding-top: 15px;line-height: 22px;}
.column-content p, .column-content .ans_section{font-size:1.4em;margin:0px;color:#5e5e5e;line-height: 24px;padding-top: 15px;padding-bottom: 5px;font-weight: bold;}
.column-content p.red{padding-bottom: 18px;color:#e90000;}
.column-content li, .column-content h6{font-size:1.4em;margin:0px;color:#000;line-height: 22px;font-weight: bold;}
.column-content h6{padding-top: 20px;display: block;margin:0px;}
.column-content ul, .column-content ol{padding-left:40px;padding-top:20px;}
.column-content ul{padding-left: 15px;}
.column-content ul li{background: url("../img/parallax/sprite.png") no-repeat scroll 2px -1210px transparent;padding-left: 25px;}
.column-content li a{text-decoration: underline;font-size: 1em;margin: 0px;color:#00436e;}
.column-content a.top{color:#00436e;font-size:1.4em;margin-top: 25px;display: block;margin-bottom: 25px;font-weight: bold;}
.column-content ol li{list-style-type: decimal;}
.column-content .locations-list{padding-bottom: 12px;}
.column-tab-content{float: left;width: 100%;}
.column-tab-content h6{width:290px;padding-right: 10px;float:left;padding-top: 15px;height:55px;}
.column_faq_section{float:left;width:100%;padding-top: 20px;padding-bottom: 10px;}
.column_faq_section ul{padding-bottom: 30px;}
.column_faq_section ul li{color:#00436e;}
.column-content .terms-condition h2, #wrapper .column-content .terms-condition h3{margin-left: 0px;}
.column-content .terms-condition h4.tc-subhead {clear: both;color: #E90000;float: left;font-size: 1.2em;margin: 0 10px 5px 0px;padding-top:0px;}
.column-content .terms-condition p{font-size: 1.2em; line-height: 19px;font-weight: normal;}
.column_faq_section p{padding-bottom: 20px;}
.column-content h5.pt{padding-top: 20px;padding-bottom: 10px;float: left;width: 100%;font-size:1.4em;margin:0px;color:#000;}
.column-content .column-tab-content p{font-weight: bold;}

.lt-ie8 .column-content h6{padding-top: 0px;}
.lt-ie8 .column-content ul li{width: 100%;}

#wrapper .job_alert .section_left{margin:0px;padding:0px;width:100%;}
#wrapper .container .job_alert p, #wrapper .container .job_alert input{margin-left:0px;}
#wrapper .container .job_alert.erro_alert p, #wrapper .container .job_alert.erro_alert input, #wrapper .container .job_alert.job_alert_activate p, #wrapper .container .job_alert.job_alert_activate input, #wrapper .container .job_alert.job_alert_delete p, #wrapper .container .job_alert.job_alert_delete input{margin-left:30px;}
.tab_content_left form .note p{display:none; font-size: 1.2em;line-height: 18px;color:#5e5e5e;width:75%;float:left;}
#wrapper .tab_content_full .tab_content_left .form_submission form .step_5 .language_lists{float:left;width:100%;}
#wrapper .tab_content_full .tab_content_left .form_submission form .step_5 .language_lists div{ display: inline-block;float: none;margin-bottom: 2px;}
.step_4 div div {top:0px !important;left:145px !important;}
/* ie.css */

/* CLEARFIX HACK */
.row,
.clr,
.group              { zoom: 1; } /* IE6 */

*:first-child+html .row,
*:first-child+html .clr,
*:first-child+html .group   { zoom: 1; } /* IE7 */


.lt-ie9 .span_1 { width: 6.5%; }
.lt-ie9 .span_2 { width: 15.0%; }
.lt-ie9 .span_3 { width: 23.5%; }
.lt-ie9 .span_4 { width: 32.0%; }
.lt-ie9 .span_5 { width: 40.5%; }
.lt-ie9 .span_6 { width: 49.0%; }
.lt-ie9 .span_7 { width: 57.5%; }
.lt-ie9 .span_8 { width: 66.0%; }
.lt-ie9 .span_9 { width: 74.5%; }
.lt-ie9 .span_10 { width: 83.0%; }
.lt-ie9 .span_11 { width: 91.5%; }
.lt-ie9 .span_12 { width: 100%; }

.lt-ie9 .col {
    margin-left: 2%;
  }

.lt-ie9 .container.main .page .inner_content {
    width: 1024px;
}
.lt-ie8 .span_7 { width: 56.5%; }
.lt-ie8 .serach_main_lists{float:none;overflow: hidden;}
.lt-ie8 .result_list{width:auto;}
.lt-ie8 .result_list .search_list{width:100%;}
.lt-ie8 header{margin:0px auto;}
/* ... */

